fixing spacing for topic names

--- a/css/cs61a.css
+++ b/css/cs61a.css
@@ -18,7 +18,7 @@ body {
 	padding-bottom: 1%;
 }
 .topic {
-	padding: 1%;
+	padding-left: 1%;
 	/*width: 100%;*/
 	font-family: 'Grand Hotel', cursive;
 	font-size: 3em;
